<resources>
    <string name="api_language">en</string>
    <string name="app_name">Weather</string>
    <string name="title_today">Today</string>
    <string name="title_week">Week</string>
    <string name="title_map">Map</string>
    <string name="my_location">My Location</string>
    <string name="search">Search</string>
    <string name="feeling_title">Feels like</string>
    <string name="temperature_title">Temperature</string>
    <string name="title_min_temp">Min T, °С</string>
    <string name="title_max_temp">Max T. °С</string>
    <string name="text_loading_error">Failed to load data for this city,
        check your internet connection.</string>
    <string name="retry_btn_title">Retry</string>
    <string name="text_weather_week">Weather forecast for the week</string>
    <string name="title_feels_like">By feeling</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_clouds">Overcast</string>
    <string name="title_pressure">Atmosphere pressure</string>
</resources>